--- a/appsettings.json
+++ b/appsettings.json
@@ -2,7 +2,7 @@
   "DatabaseSettings": {
     "ProjectsCollectionName": "Projects",
     "DoorsCollectionName": "Doors",
-    "ConnectionString": "mongodb+srv://dbUser:dbUserPassword@cluster0.zbaxw.mongodb.net/myFirstDatabase?retryWrites=true&w=majority",
+    "ConnectionString": "",
     "DatabaseName": "assesmentDb"
   },
   "Logging": {
